// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success conditions Smoke test 1`] = `
Object {
  "concurrency": "build",
  "env": Object {
    "CI": "true",
  },
  "name": "Build",
  "permissions": Object {
    "contents": "write",
  },
  "runsOn": Array [
    "ubuntu-latest",
  ],
  "steps": Array [
    Object {
      "name": "Checkout",
      "uses": "actions/checkout@v3",
      "with": Object {},
    },
    Object {
      "name": "Setup Node.js",
      "uses": "actions/setup-node@v3",
      "with": Object {
        "cache": "npm",
        "node-version": "latest",
      },
    },
    Object {
      "name": "Install dependencies",
      "run": "yarn install --check-files --frozen-lockfile",
    },
    Object {
      "name": "build",
      "run": "npx projen build",
    },
  ],
}
`;

exports[`success conditions With two Deploy artifacts 1`] = `
Object {
  "concurrency": "build",
  "env": Object {
    "CI": "true",
  },
  "name": "Build",
  "permissions": Object {
    "contents": "write",
  },
  "runsOn": Array [
    "ubuntu-latest",
  ],
  "steps": Array [
    Object {
      "name": "Checkout",
      "uses": "actions/checkout@v3",
      "with": Object {},
    },
    Object {
      "name": "Setup Node.js",
      "uses": "actions/setup-node@v3",
      "with": Object {
        "cache": "npm",
        "node-version": "latest",
      },
    },
    Object {
      "name": "Install dependencies",
      "run": "yarn install --check-files --frozen-lockfile",
    },
    Object {
      "name": "build",
      "run": "npx projen build",
    },
    Object {
      "continueOnError": true,
      "name": "Backup artifact permissions for \\"foo\\"",
      "run": "getfacl -R . > permissions-backup.acl",
      "workingDirectory": "foo",
    },
    Object {
      "name": "Upload artifacts for \\"foo\\"",
      "uses": "actions/upload-artifact@v3",
      "with": Object {
        "name": "build-artifact-acbd18db",
        "path": "foo",
      },
    },
    Object {
      "continueOnError": true,
      "name": "Backup artifact permissions for \\"bar\\"",
      "run": "getfacl -R . > permissions-backup.acl",
      "workingDirectory": "bar",
    },
    Object {
      "name": "Upload artifacts for \\"bar\\"",
      "uses": "actions/upload-artifact@v3",
      "with": Object {
        "name": "build-artifact-37b51d19",
        "path": "bar",
      },
    },
  ],
}
`;
